--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -33,6 +33,7 @@ h1, h2, h3, h4, h5, h6 {
     background-attachment: fixed;
     position: relative;
     overflow: hidden;
+    margin-left: .5rem; 
   }
   
   .hero-image img {
